force-app/main/default/objects/Donation_Management__c/Donation_Management__c.object-meta.xml
<CustomObject>
    <label>Donation Management</label>
    <nameField>
        <label>Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donation Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>