force-app/main/default/objects/Donation_Management__c/fields/Acknowledgment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgment Sent</label>
    <type>Checkbox</type>
</CustomField>