force-app/main/default/objects/Donation_Management__c/fields/Date_of_Donation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Donation__c</fullName>
    <label>Date of Donation</label>
    <type>Date</type>
</CustomField>