force-app/main/default/objects/Donation_Management__c/fields/Donation_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Donation_Purpose__c</fullName>
    <label>Donation Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Specific Campaign</fullName>
            </value>
            <value>
                <fullName>Event Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>