force-app/main/default/objects/Donation_Management__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Donation Managements</relationshipLabel>
    <relationshipName>Donation_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>